# Create_Rivals-roblox

./: 00_START_HERE.md  MULTI_LANGUAGE_SYSTEM_SUMMARY.md  QUICK_REFERENCE.md  README.md  local_test_instructions.md  rg-Create_Rivals.sln
.github/workflows/: build-cpp.yml  ci-cd.yml  publish-nuget.yml
RobloxProject/: OneClickSetup.lua  StudioAutoBuilder.lua  StudioBootstrap.lua  instructions.md  local_test_instructions.md
RobloxProject/ReplicatedStorage/Modules/: CombatSystem.lua  EconomySystem.lua  GraphicsEngine.lua  PetSystem.lua  PlayerStats.lua  RNGSystem.lua  (+1 more)
RobloxProject/ServerScriptService/: AdminTag.lua  AntiCheat.lua  CombatHandler.lua  DataManager.lua  EconomyHandler.lua  ExternalCoreIntegration.lua  GameInit.lua  GameManager.lua  GameManagerConfig.lua  GraphicsService.lua  PetHandler.lua  RemoteInit.lua  TeleportHandler.lua
RobloxProject/Workspace/: BuildWorld.lua
backend/: Matchmaker.Tests.csproj  Matchmaker.csproj  Program.cs  README.md
backend/Controllers/: MatchmakingController.cs  PlayerController.cs
backend/Models/: MatchRequest.cs  PlayerStats.cs  PlayerStatsUpdate.cs  ScoreUpdate.cs
backend/Services/: MatchmakingService.cs  PlayerStatsService.cs
backend/Tests/: MatchmakingServiceTests.cs  PlayerStatsServiceTests.cs
backend/node/: README.md  index.js  package.json
backend/python/: README.md  main.py
local/: ARCHITECTURE.md  CMakeLists.txt  INDEX.md  LocalDashboard.csproj  Program.cs  README.md  START_DASHBOARD.sh  SYSTEM_CHECKLIST.md  SYSTEM_MAP.md  TESTING_GUIDE.md  index.html  main.cpp
local/wwwroot/: api.js  app.js  style.css
(+21 files in other folders)
